<resources>
    <string name="app_name">EcoGas</string>
    <string name="station_name">Station Name:</string>
    <string name="stName">TextView</string>
    <string name="available_fuel">Available Fuel (Ltr)</string>
    <string name="diesel">Diesel:</string>
    <string name="petrol95_fuel">TextView</string>
    <string name="welcome">Welcome</string>
    <string name="petrol_92">Petrol:</string>
    <string name="petrol_95">Super Petrol:</string>
    <string name="petrol95q">TextView</string>
    <string name="owner_name">TextView</string>
    <string name="petrol92q">TextView</string>
    <string name="p95_arr">TextView</string>
    <string name="number_of_vehicles_in_queue">Vehicles in Queue</string>
    <string name="p92_arr">TextView</string>
    <string name="update_status">Update Fuel Status</string>
    <string name="d_arr">TextView</string>
    <string name="diesel_fuel">TextView</string>
    <string name="fuel_arriving_time">Next Fuel Arrivals</string>
    <string name="petrol92_fuel">TextView</string>
    <string name="update_title">Update Fuel Status</string>
    <string name="fuel">Fuel</string>
    <string name="dieselq">TextView</string>
    <string name="arrival">Arrival Time</string>
    <string name="date">Add Date:</string>
    <string name="time">Add Time:</string>
    <string name="update">Update Status</string>
    <string name="cap">Capacity (ltr):</string>
    <string name="updateSP">Update Super Petrol Status</string>
    <string name="updateP">Update Petrol Status</string>
    <string name="updateD">Update Diesel Status</string>
    <string name="location">Location:</string>
    <string name="s_location">TextView</string>
    <string name="st_location">Station Location:</string>
    <string name="superDiesel">Super Diesel:</string>
    <string name="updateSD">Update Super Diesel Status</string>
    <string name="data">Date:</string>
    <string name="fuelType">Select Fuel Type:</string>
    <string name="regStationOwner">Register New Station</string>
    <string name="log_out">Logout</string>
    <string name="profile">Edit Profile</string>
    <string name="viewAllStations">View All Stations</string>
    <string name="viewAllUsers">View All Users</string>
    <string name="search">Search</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="textview">TextView</string>
    <string name="queue_line_number">Queue Line Number:</string>
    <string name="joined_queue">Joined Queue</string>
    <string name="remove_queue">Remove Queue</string>
    <string name="add_queue">Add Queue</string>
    <string name="joined_time">Joined Time:</string>

</resources>