<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="5dp"
        android:background="@color/tile_color">

        <TextView
            android:id="@+id/StNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/station_name"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/StLocationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:padding="5dp" />

        <TextView
            android:id="@+id/StFuelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel_type"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:padding="5dp" />

    </LinearLayout>

</LinearLayout>