<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="5dp"
        android:background="@color/tile_color">

        <TextView
            android:id="@+id/StNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/station_name"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            app:drawableStartCompat="@drawable/ic_station" />
        <TextView
            android:id="@+id/stID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/StLocationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_location"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            app:drawableStartCompat="@drawable/ic_location" />

    </LinearLayout>

</LinearLayout>