<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewAllStation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:id="@+id/searchTabsLayout">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/location"
                app:startIconDrawable="@drawable/ic_location">

                <AutoCompleteTextView
                    android:id="@+id/spinnerLocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/location"
                    android:inputType="none"
                    android:textColorHint="#757575" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/fuel_type"
                app:startIconDrawable="@drawable/ic_station">

                <AutoCompleteTextView
                    android:id="@+id/spinnerType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/fuel_type"
                    android:inputType="none"
                    android:textColorHint="#757575" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/superDieselBtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_700"
                android:onClick="searchTapped"
                android:text="@string/search"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    <ListView
        android:id="@+id/stationsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        />

</LinearLayout>